--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
         "@vitejs/plugin-react": "^3.1.0",
         "vite": "^4.1.0"
     },
-    "proxy": "http://localhost:8500"
+    "proxy": "https://shopv2.onrender.com"
 }
